@@ -16,3 +16,9 @@ A la plaçe de "H:\Documents\javafx-sdk-21.0.7\lib"  mettez vos chemins de javaf
 
 
 Pour télécharger javaFX : https://gluonhq.com/products/javafx/ --> Prenez bien la version 21 et SDK 
+
+
+---- LATEST COMP COMMANDS
+javac --module-path "H:\Documents\javafx-sdk-21.0.7\lib" --add-modules javafx.controls,javafx.fxml,javafx.swing -d out src\CY_PUZZLE\*.java src\ttt\*.java
+ 
+java --module-path "H:\Documents\javafx-sdk-21.0.7\lib" --add-modules javafx.controls,javafx.fxml,javafx.swing -cp out CY_PUZZLE.Main
